velkej update, payment + design

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jak bude doučování probíhat – Studenti studentům</title>
+  <title>Studna-doucování na přijímačky</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="icon" type="image/jpeg" href="{{ url_for('static', filename='img/favicon.jpg') }}">
 </head>
@@ -14,7 +14,7 @@
       align-items: flex-end;
       justify-content: center;
       padding: clamp(1rem, 3vw, 3vw) clamp(3rem, 10vw, 10vw);
-      background-color: #eef0f2;
+      background-color: #f5faff;
       border-radius: clamp(0.5rem, 1vw, 1rem);
       flex-wrap: wrap;
     }
