--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>O projektu – Studenti studentům</title>
+    <title>Studna-doucování na přijímačky</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="icon" type="image/jpeg" href="{{ url_for('static', filename='img/favicon.jpg') }}">
     <style>
@@ -68,7 +68,7 @@
         }
 
         .project-info {
-            max-width: 3000px;
+            max-width: 65vw;
             margin: 0;
             padding: 2.5vw 5vw;
             text-align: left;
@@ -108,6 +108,17 @@
             .hero-video iframe {
                 max-width: 100%;
             }
+            .project-info {
+                max-width: 100vw;
+                margin: 0;
+                padding: 2.5vw 5vw;
+                text-align: left;
+                line-height: 1.7;
+                font-size: 1.1rem;
+                color: #1d1d1d;
+                background-color: white;
+            }
+        
         }
     </style>
 </head>
@@ -146,24 +157,17 @@
 
     <section class="project-info" id="o-projektu">
         <h3>Kdo jsme</h3>
-        <p>Jsme studenti Gymnázia Jana Keplera a jejich rodiče, co už přijímačkovým procesem uspěšně prošli. Zažili jsme frustraci z předražených doučování a stres s výběrem škol.
-        A tak jsme se rozhodli založit Studnu. Studentské doučování, "od studentu pro studenty"
-        Co přijímačky už úspěšně zvládly a z první ruky vědí co příprava obnáší. Kepleráci mají naoplátku možnost kvalitní Brigády
+        <p>
+            Jsme studenti Gymnázia Jana Keplera, kteří Cermaty už úspěšně napsali.
+            Právě při přípravě na Cermaty jsme zjistili, že větší doučka mají většinou problém studenty něco reálně naučit,
+            a studenti se proto většinou musí doučovat doma či musí dohledávat jiná doučování. 
+            Nakonec jsme se proto rozhodli, že si založíme vlastní školní doučování, které studenty na cermat testy řádně připraví.
         </p>
         <h3>Jak funguje doučko</h3>
-        <p>Celé Du dělíme na dvě části, Šprtárnu a Masakr. Jak probíhají?
-            Šprtárna je o šprtání. Na úvodní hodině rozřadíme žáky do skupinek po 3-5 lidech test podle kterého deváťáky rozdělíme do skupinek po 3-5 lidech.
-        </p>
         <p>
-            Dalším cílem je aktivizovat studenty středních škol napříč Českou republikou...
-        </p>
-
-        <h3>Základní pravidla festivalu idk</h3>
-        <p>
-            Základním pravidlem festivalu je, že bude plně v režii studentů...
-        </p>
-        <p>
-            Každý den bude festival otevřený pro veřejnost od cca 8:30 do 16:00 hodin...
+            Doučování je rozděleno na dvě části: na Šprtárnu a Masakr.
+            Šprtárná spočívá v obecném doučování látky ve skupinkách, které rozřadíme podle počtu bodů v prvním rozřazovacím testu. V části Masakr se zaměřujeme primárně na psaní testů a doučování specifických problémů dané látky,
+            tato část bude probíhat opět ve skupinkách.
         </p>
     </section>
     <footer>
