--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -11,7 +11,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f5faff;
+  background-color: white;
   color: #333333;
 }
 
