idk co jsme udelal ale sral jsem se s tím 90min

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -142,19 +142,20 @@
       flex-wrap: wrap;
     }
     .description-block {
-      flex: 1 1 300px;
+      flex: 1 1 200px;
       background-color: #ffffff;
       padding: clamp(1rem, 2vw, 2rem);
       border-radius: clamp(0.7rem, 1vw, 1rem);
       box-shadow: 0 clamp(0.1rem, 0.3vw, 0.4rem) clamp(0.3rem, 1vw, 1rem) rgba(0, 0, 0, 0.05);
     }
     .description-block h3 {
-      font-size: clamp(1.2rem, 1.5vw, 1.4rem);
+      font-size: clamp(1.2rem, 2vw, 2rem);
       margin-bottom: 1rem;
       color: #1d3557;
     }
     .description-block p {
-      font-size: clamp(0.9rem, 1vw, 1rem);
+      font-size: clamp(0.9rem, 1.3vw, 2rem);
+      font-weight: 500;
     }
 
     /* ===== MAPA ===== */
@@ -302,12 +303,17 @@
 
   <div class="timeline-description">
     <div class="description-block">
-      <h3>Šprtárna</h3>
-      <p>V lednu se zaměřujeme na základní témata. Lektoři vysvětlují nové látky, stavíme pevné základy a rozjíždíme doučko pozvolna.</p>
+      <h3 style="color: #17c3b2;">Šprtárna</h3>
+      <p>
+        V teto části se budeme zaobírat společným vyplňováním a nasledným opravováním testů. Studenti budou testy vyplňovat po cvičeních, které si se svým lektorem ve skupinkách následně zkontrolují a v případě chyby jim lektor látku vysvětlí. Takto studenti projdou společně celým testem,
+        což by jim po ukončení této části mělo dát dostatečné znalosti obecné látky potřebné k úspěšnému přijetí na jejich vysněnou střední školu.
+      </p>
     </div>
     <div class="description-block">
-      <h3>Masakr</h3>
-      <p>Od února začíná intenzivní příprava. Přijímačky se blíží, zvyšujeme tempo, řešíme testy a ladíme detaily.</p>
+      <h3 style="color: #fe6d73;">Masakr</h3>
+      <p>V této části si studenti na začátku vyberou, v jakých oblastech daných předmětů by se chtěli zlepšovat, a podle toho budou následně rozřazeni do skupin.
+        Následně budou psát testy na “ostro” stejně jako u reálných přijímaček. V poslední části lekce si pak testy ve 
+      </p>
     </div>
   </div>
   <section style="text-align: center;">
