--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -28,16 +28,18 @@ h2 {
   line-height: 1.3;
 }
 h3 {
-  font-size: clamp(1.2rem, 3vw, 1.8rem);
-  font-weight: 600;
-  margin-top: 1.5rem;
-  margin-bottom: 0.6rem;
+  font-size: clamp(1.2rem, 3vw, 3rem);
+  font-weight: 700;
+  margin-top: 1.2rem;
+  margin-bottom: 0.4rem;  
   line-height: 1.3;
 }
 h4 {
-  font-size: clamp(1rem, 2.5vw, 1.4rem);
+  font-size: clamp(1rem, 3vw, 1.8rem);
   font-weight: 600;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.6rem;
+  margin-top: 1.5rem;
+  line-height: 1.3;
 }
 p {
   font-size: clamp(1rem, 1.6vw, 1.2rem);
