--- a/app/templates/kontakt.html
+++ b/app/templates/kontakt.html
@@ -2,6 +2,7 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8" />
+  <meta name="description" content="Kvalitní doučování matematiky a angličtiny pro úspěch u přijímaček na SŠ/VŠ a maturity. Individuální online i prezenční výuka.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Studna-doucování na přijímačky</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
