--- a/app/templates/payment.html
+++ b/app/templates/payment.html
@@ -10,11 +10,10 @@
   <style>
     .payment-section {
       background-color:#f5faff; 
-      padding: clamp(0rem, 0vw, 5vw) clamp(3vw, 6vw, 8vw);
-      margin-top: clamp(-4rem, -1vw, 5vw) auto;
-      margin-bottom: clamp(2rem, 34vw, 5vw) auto;
-      max-width: 1200px;
-      background-color: #f5faff;
+      padding: clamp(0rem, 0vw, 5vw) clamp(2vw, 4vw, 8vw);
+      margin-top: -5vw auto;
+      margin-bottom: 15vw auto;
+      max-width: 100vw;
     }
 
     .course-offerings {
@@ -206,7 +205,7 @@
       </div>
 
       <div class="course-card">
-        <h3 style="color: #fe6d73;">Masakr</h3>
+        <h3 style="color: #17c3b2;">Šprtárna</h3>
         <p><strong>Období:</strong> 1. únor – 15. březen</p>
         <p><strong>Obsah:</strong> Od února začíná intenzivní příprava! Přijímačky se blíží, proto zvyšujeme tempo, řešíme cvičné testy, analyzujeme chyby a ladíme detaily k dokonalosti.</p>
         <p><strong>Rozsah:</strong> 30 hodin</p>
@@ -240,7 +239,7 @@
         </div>
       </div>
       <div class="course-card">
-        <h3 style="color: #17c3b2;">Šprtárna</h3>
+        <h3 style="color: #fe6d73;">Masakr</h3>
         <p><strong>Období:</strong> 1. únor – 15. březen</p>
         <p><strong>Obsah:</strong> Od února začíná intenzivní příprava! Přijímačky se blíží, proto zvyšujeme tempo, řešíme cvičné testy, analyzujeme chyby a ladíme detaily k dokonalosti.</p>
         <p><strong>Rozsah:</strong> 30 hodin</p>
